font-weight -> fw

--- a/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
+++ b/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
@@ -17,7 +17,7 @@
 
         <div class="row mb-4 align-items-end">
             <div class="input-group col-sm col-12">
-              <span class="font-weight-bold mt-1">Start Date:</span>
+              <span class="fw-bold mt-1">Start Date:</span>
               <div class="input-group">
                 <input class="form-control" name="d1" ngbDatepicker #d1="ngbDatepicker" placeholder="yyyy-mm-dd" [(ngModel)]="startDate" />
                 <div class="input-group-append">
@@ -27,7 +27,7 @@
               </div>
             </div>
             <div class="input-group col-sm col-12">
-              <span class="font-weight-bold mt-1">End Date:</span>
+              <span class="fw-bold mt-1">End Date:</span>
               <div class="input-group">
                 <input class="form-control" name="d2" ngbDatepicker #d2="ngbDatepicker" placeholder="yyyy-mm-dd" [(ngModel)]="endDate" />
                 <div class="input-group-append">
