--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
@@ -94,7 +94,7 @@
   .navbar.navbar-zybach-secondary{
     background-color: #ffffff;
     font-size: 12px;
-    font-weight: bold;
+    fw: bold;
     
     .dropdown-menu{
       font-size: 12px;
