--- a/Zybach.Web/src/scss/_variables.scss
+++ b/Zybach.Web/src/scss/_variables.scss
@@ -45,7 +45,7 @@ $header-gradient-start: transparent;
 $header-gradient-end: transparent;
 $header-nav-after-height: 0px;
 $header-nav-link: #fff;         
-$header-nav-link-font-weight: inherit;
+$header-nav-link-fw: inherit;
 $h4-styled: #194349;
 $select: #1F4D3D;
 $select-and-nav-dropdown-hover: #4aaa42;
