--- a/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
+++ b/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
@@ -15,7 +15,7 @@
             <form #editSensorAnomalyForm="ngForm" *ngIf="sensorAnomalyModel" (ngSubmit)="onSubmit(editSensorAnomalyForm)">
                 <div class="row">
                     <div class="col-sm-3 text-sm-right">
-                        <span class="font-weight-bold">Sensor Name</span>
+                        <span class="fw-bold">Sensor Name</span>
                     </div>
                     <div class="col-sm-9">
                         {{sensorAnomaly.Sensor.SensorName}}
@@ -23,7 +23,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-sm-3 text-sm-right">
-                        <span class="font-weight-bold">
+                        <span class="fw-bold">
                             <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
                             </field-definition>: 
                         </span>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-sm-3 text-sm-right">
-                        <span class="font-weight-bold required">Start Date</span>
+                        <span class="fw-bold required">Start Date</span>
                     </div>
                     <div class="col-sm-9">
                         <div class="input-group mt-1">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-sm-3 text-sm-right">
-                        <span class="font-weight-bold required">End Date</span>
+                        <span class="fw-bold required">End Date</span>
                     </div>
                     <div class="col-sm-9">
                         <div class="input-group mt-1">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-sm-3 text-sm-right">
-                        <span class="font-weight-bold">Notes</span>
+                        <span class="fw-bold">Notes</span>
                     </div>
                     <div class="col-sm-9">
                         <textarea class="form-control" name="notes" style="height: 100px"
