--- a/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
+++ b/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
@@ -238,7 +238,7 @@
                 <div class="card-header">Create Anomaly Report</div>
                 <div class="card-body">
                     <div>
-                        <span class="font-weight-bold required">Start Date</span>
+                        <span class="fw-bold required">Start Date</span>
                         <div class="input-group mt-1">
                             <input class="form-control" placeholder="Select a start date"
                                 [(ngModel)]="sensorAnomalyModel.StartDate" ngbDatepicker #d1="ngbDatepicker" required >
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     <div class="mt-3">
-                        <span class="font-weight-bold required">End Date</span>
+                        <span class="fw-bold required">End Date</span>
                         <div class="input-group mt-1">
                             <input class="form-control" placeholder="Select an end date"
                                 [(ngModel)]="sensorAnomalyModel.EndDate" ngbDatepicker #d2="ngbDatepicker" required >
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                     <div class="mt-3">
-                        <span class="font-weight-bold">Notes</span>
+                        <span class="fw-bold">Notes</span>
                         <textarea class="form-control" style="height: 100px"
                             [(ngModel)]="sensorAnomalyModel.Notes">
                         </textarea>
