--- a/Zybach.Web/src/scss/_forms.scss
+++ b/Zybach.Web/src/scss/_forms.scss
@@ -1,6 +1,6 @@
 .required:after{
   content: '\f0e7';
-  font-weight:900;
+  fw:900;
   margin-left:5px;
   font-size:10px;
   font-family: 'Font Awesome 5 Free';
