remove underline from links that are not being hovered over

--- a/Zybach.Web/src/scss/_custom-bootstrap.scss
+++ b/Zybach.Web/src/scss/_custom-bootstrap.scss
@@ -29,8 +29,13 @@ abbr[data-original-title] {
   color: #474D52;
 }
 
+a:link {
+  text-decoration: none;
+}
+
 // Maintain link color on hover
 a:hover {
+  text-decoration: underline;
   color: #205c90;
 }
 
