Fix padding on breadcrumb

--- a/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb" *ngIf="chemigationPermit">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item">
             <a routerLink="/chemigation-permits">Chemigation Permits</a>
         </li>
