--- a/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
+++ b/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
@@ -1,6 +1,6 @@
 <div class="breadcrumb-container">
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb p-3">
             <li class="breadcrumb-item">
                 <a routerLink="/">Home</a>
             </li>
