--- a/Zybach.Web/src/app/pages/field-definition-edit/field-definition-edit.component.html
+++ b/Zybach.Web/src/app/pages/field-definition-edit/field-definition-edit.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item" aria-current="page">
             <a routerLink="/labels-and-definitions" *ngIf="currentUserIsAdmin()">Labels and Definitions</a>
             <span *ngIf="!currentUserIsAdmin()">Labels and Definitions</span>
