--- a/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
+++ b/Zybach.Web/src/app/pages/reports-list/reports-list.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item active" aria-current="page">Report Center</li>
     </ol>
 </nav>
