--- a/Zybach.Web/src/app/pages/user-detail/user-detail.component.html
+++ b/Zybach.Web/src/app/pages/user-detail/user-detail.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb" *ngIf="user">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item" aria-current="page">
             <a routerLink="/users" *ngIf="currentUserIsAdmin()">Users</a>
             <span *ngIf="!currentUserIsAdmin()">Users</span>
