--- a/Zybach.Web/src/app/pages/water-level-inspection-edit/water-level-inspection-edit.component.html
+++ b/Zybach.Web/src/app/pages/water-level-inspection-edit/water-level-inspection-edit.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb" *ngIf="waterLevelInspection">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item">
             <a routerLink="/water-level-inspections">Water Level Inspections</a>
         </li>
