--- a/Zybach.Web/src/app/pages/water-quality-inspection-edit/water-quality-inspection-edit.component.html
+++ b/Zybach.Web/src/app/pages/water-quality-inspection-edit/water-quality-inspection-edit.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb" *ngIf="waterQualityInspection">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item">
             <a routerLink="/water-quality-inspections">Water Quality Inspections</a>
         </li>
