--- a/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
+++ b/Zybach.Web/src/app/pages/well-group-detail/well-group-detail.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
+    <ol class="breadcrumb p-3">
         <li class="breadcrumb-item">
             <a routerLink="/well-groups">Well Groups</a>
         </li>
