--- a/Zybach.Web/src/app/pages/user-invite/user-invite.component.html
+++ b/Zybach.Web/src/app/pages/user-invite/user-invite.component.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="form-horizontal">
-                    <div class="form-group">
+                    <div class="form-group p-3">
                         <div class="col-sm-2 control-label">
                             <label class="required">First Name</label>
                         </div>
@@ -34,7 +34,7 @@
                                 [(ngModel)]="model.FirstName" />
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-3">
                         <div class="col-sm-2 control-label">
                             <label class="required">Last Name</label>
                         </div>
@@ -43,7 +43,7 @@
                                 [(ngModel)]="model.LastName" />
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-3">
                         <div class="col-sm-2 control-label">
                             <label class="required">Email</label>
                         </div>
@@ -52,7 +52,7 @@
                                 [(ngModel)]="model.Email" />
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group p-3">
                         <div class="col-sm-2 control-label">
 
                             <label class="required">Role</label>
@@ -69,8 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <hr />
+        <div class="row p-2">
             <div class="col-xs-12 col-sm-2">
                 <i class="fas fa-bolt"></i> Required field
             </div>
