--- a/Zybach.Web/src/scss/_custom-bootstrap.scss
+++ b/Zybach.Web/src/scss/_custom-bootstrap.scss
@@ -117,6 +117,12 @@ a:hover {
   border-color: $button-hover-background;
 }
 
+.btn-zybach:focus {
+  color: $button-hover-text-color;
+  background: $button-hover-background;
+  border-color: $button-hover-background;
+}
+
 .btn-toggle,
 .btn-toggle.disabled:hover {
   color: #212529;
