--- a/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
+++ b/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
@@ -14,7 +14,7 @@
         <div class="col-xl-5 col-lg-7 col-md-9 m-auto">
             <form #editSensorAnomalyForm="ngForm" *ngIf="sensorAnomalyModel" (ngSubmit)="onSubmit(editSensorAnomalyForm)">
                 <div class="row">
-                    <div class="col-sm-3 text-sm-right">
+                    <div class="col-sm-3 text-sm-end">
                         <span class="fw-bold">Sensor Name</span>
                     </div>
                     <div class="col-sm-9">
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-sm-3 text-sm-right">
+                    <div class="col-sm-3 text-sm-end">
                         <span class="fw-bold">
                             <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
                             </field-definition>: 
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-sm-3 text-sm-right">
+                    <div class="col-sm-3 text-sm-end">
                         <span class="fw-bold required">Start Date</span>
                     </div>
                     <div class="col-sm-9">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-sm-3 text-sm-right">
+                    <div class="col-sm-3 text-sm-end">
                         <span class="fw-bold required">End Date</span>
                     </div>
                     <div class="col-sm-9">
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-sm-3 text-sm-right">
+                    <div class="col-sm-3 text-sm-end">
                         <span class="fw-bold">Notes</span>
                     </div>
                     <div class="col-sm-9">
