--- a/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
@@ -45,7 +45,7 @@
                         <div class="col-xl-6">
 
                             <div class="row mt-2">
-                                <div class="col-xl-6 col-sm-4 text-sm-right">
+                                <div class="col-xl-6 col-sm-4 text-sm-end">
                                     <strong>Created By: </strong>
                                 </div>
                                 <div class="col-xl-6 col-sm-8">
@@ -54,7 +54,7 @@
                             </div>
     
                             <div class="row mt-2">
-                                <div class="col-xl-6 col-sm-4 text-sm-right">
+                                <div class="col-xl-6 col-sm-4 text-sm-end">
                                     <strong>Date Created: </strong>
                                 </div>
                                 <div class="col-xl-6 col-sm-8">
@@ -63,7 +63,7 @@
                             </div>
     
                             <div class="row mt-2">
-                                <div class="col-xl-6 col-sm-4 text-sm-right">
+                                <div class="col-xl-6 col-sm-4 text-sm-end">
                                     <strong>Last Updated: </strong>
                                 </div>
                                 <div class="col-xl-6 col-sm-8">
@@ -76,7 +76,7 @@
                         <div class="col-xl-6">
     
                             <div class="row mt-2">
-                                <div class="col-xl-6 col-sm-4 text-sm-right">
+                                <div class="col-xl-6 col-sm-4 text-sm-end">
                                     <strong>
                                         <field-definition [fieldDefinitionType]="'WellRegistrationNumber'" labelOverride="Well Reg #">
                                         </field-definition>: 
@@ -90,7 +90,7 @@
                             </div>
     
                             <div class="row mt-2">
-                                <div class="col-xl-6 col-sm-4 text-sm-right">
+                                <div class="col-xl-6 col-sm-4 text-sm-end">
                                     <strong>Sensor: </strong>
                                 </div>
                                 <div class="col-xl-6 col-sm-8">
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="row mt-2">
-                        <div class="col-xl-3 col-sm-4 text-sm-right">
+                        <div class="col-xl-3 col-sm-4 text-sm-end">
                             <strong>Description: </strong>
                         </div>
                         <div class="col-xl-9 col-sm-8">
