--- a/Zybach.Web/src/app/pages/user-detail/user-detail.component.html
+++ b/Zybach.Web/src/app/pages/user-detail/user-detail.component.html
@@ -29,56 +29,56 @@
                 </div>
                 <div class="card-body">
                     <dl class="row">
-                        <dt class="text-sm-right col-sm-5 col-xs-12">Username</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">Username</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.LoginName}}
                             <em *ngIf="!user?.LoginName" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12">First Name</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">First Name</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.FirstName}}
                             <em *ngIf="!user?.FirstName" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12">Last Name</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">Last Name</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.LastName}}
                             <em *ngIf="!user?.LastName" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12">Full Name</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">Full Name</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.FullName}}
                             <em *ngIf="!user?.FullName" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12">Phone</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">Phone</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.Phone}}
                             <em *ngIf="!user?.Phone" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12">Email</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">Email</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.Email}}
                             <em *ngIf="!user?.Email" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12">Role</dt>
+                        <dt class="text-sm-end col-sm-5 col-xs-12">Role</dt>
                         <dd class="col-sm-7 col-xs-12">
                             {{user?.Role?.RoleDisplayName}}
                             <em *ngIf="!user?.Role?.RoleDisplayName" class="text-muted">Not Available</em>
                         </dd>
 
                         <ng-container *ngIf="userIsAdministrator()">
-                            <dt class="text-sm-right col-sm-5 col-xs-12">Receives System Communications?</dt>
+                            <dt class="text-sm-end col-sm-5 col-xs-12">Receives System Communications?</dt>
                             <dd class="col-sm-7 col-xs-12" *ngIf="user.Role.RoleID === 1">
                                 {{ booleanValueGetter(user?.ReceiveSupportEmails) }}
                                 <em *ngIf="!user" class="text-muted">Not Available</em>
                             </dd>
 
-                            <dt class="text-sm-right col-sm-5 col-xs-12">Performs Chemigation Inspections?</dt>
+                            <dt class="text-sm-end col-sm-5 col-xs-12">Performs Chemigation Inspections?</dt>
                             <dd class="col-sm-7 col-xs-12" *ngIf="user.Role.RoleID === 1">
                                 {{ booleanValueGetter(user?.PerformsChemigationInspections) }}
                                 <em *ngIf="!user" class="text-muted">Not Available</em>
