fix button size

--- a/Zybach.Web/src/app/shared/components/chemigation-permit-applicators-editor/chemigation-permit-applicators-editor.component.html
+++ b/Zybach.Web/src/app/shared/components/chemigation-permit-applicators-editor/chemigation-permit-applicators-editor.component.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </form>
-<div class="row ms-3 mt-2">
+<div class="row ms-3 mt-2 col-2">
     <button type="button" class="btn btn-zybach" (click)="addRow()">
         <span class="fa fa-plus"></span>
         Add New Applicator
