--- a/Zybach.Web/src/app/pages/water-level-inspection-new/water-level-inspection-new.component.html
+++ b/Zybach.Web/src/app/pages/water-level-inspection-new/water-level-inspection-new.component.html
@@ -31,17 +31,19 @@
         </zybach-water-level-inspection-upsert >
 
         <div class="col-12 text-end mt-3 me-3">
-            <div class="col-sm text-start float-end">
+            <div class="col-sm text-start">
                 <i class="fas fa-bolt"></i> Required field
             </div>
-            <button type="submit" class="btn btn-zybach me-1">
-                <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                Save
-            </button>
-            <a class="btn btn-secondary ms-1"
-                routerLink="..">
-                Cancel
-            </a>
+            <div class="float-end">
+                <button type="submit" class="btn btn-zybach me-1">
+                    <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+                    Save
+                </button>
+                <a class="btn btn-secondary ms-1"
+                    routerLink="..">
+                    Cancel
+                </a>
+            </div>
         </div>
 
     </form>
