--- a/Zybach.Web/src/app/shared/components/water-year-select/water-year-select.component.html
+++ b/Zybach.Web/src/app/shared/components/water-year-select/water-year-select.component.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline mt-0 mb-0">
+<div class="form-group form-inline mt-0 mb-0 d-flex">
   {{selectYearLabel}}  
   <a href="#" class="nav-link water-year-dropdown dropdown-toggle fw-bold" role="button" data-bs-toggle="dropdown">
     {{selectedYear || "All Years"}}
