--- a/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -10,12 +10,14 @@
         <div class="container col-12">
             <div class="col-4 float-start ms-2">
                 <div class="row align-items-center">
-                    <span class="far fa-calendar me-2"> </span>
-                    <zybach-water-year-select [(selectedYear)]="yearToDisplay"
-                        (selectedYearChange)="updateAnnualData()" [(allYearsSelected)]="allYearsSelected"
-                        (allYearsSelectedChange)="updateAnnualData()"
-                        >
-                    </zybach-water-year-select>
+                    <span class="far fa-calendar me-2 col-1"> </span>
+                    <div class="col-6">
+                        <zybach-water-year-select [(selectedYear)]="yearToDisplay"
+                            (selectedYearChange)="updateAnnualData()" [(allYearsSelected)]="allYearsSelected"
+                            (allYearsSelectedChange)="updateAnnualData()"
+                            >
+                        </zybach-water-year-select>
+                    </div>
                 </div>
             </div>
             <div class="row ms-2 mb-2">
