--- a/Zybach.Web/src/app/shared/components/sensor-chart/sensor-chart.component.html
+++ b/Zybach.Web/src/app/shared/components/sensor-chart/sensor-chart.component.html
@@ -31,26 +31,22 @@
     </div>
   </div>
   <div class="row mb-1 mt-2">
-    <div class="input-group col-6">
+    <div class="col-6">
       <span class="fw-bold mt-1 mx-2">Start Date:</span>
       <div class="input-group">
         <input class="form-control" name="d1" ngbDatepicker #d1="ngbDatepicker" placeholder="yyyy-mm-dd"
           (ngModelChange)="onStartDateChanged($event)" [(ngModel)]="startDate" />
-        <div class="input-group-append">
           <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()"
             type="button"></button>
-        </div>
       </div>
     </div>
-    <div class="input-group col-6">
+    <div class="col-6">
       <span class="fw-bold mt-1 mx-2">End Date:</span>
       <div class="input-group">
         <input class="form-control" name="d2" ngbDatepicker #d2="ngbDatepicker" placeholder="yyyy-mm-dd"
           (ngModelChange)="onEndDateChanged($event)" [(ngModel)]="endDate" />
-        <div class="input-group-append">
           <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d2.toggle()"
             type="button"></button>
-        </div>
       </div>
     </div>
   </div>
