--- a/Zybach.Web/src/app/pages/water-level-inspection-edit/water-level-inspection-edit.component.html
+++ b/Zybach.Web/src/app/pages/water-level-inspection-edit/water-level-inspection-edit.component.html
@@ -32,7 +32,7 @@
         </zybach-water-level-inspection-upsert >
 
         <div class="col-12 text-end mt-3 me-3">
-            <div class="col-sm text-start float-end">
+            <div class="col-sm text-start p-2">
                 <i class="fas fa-bolt"></i> Required field
             </div>
             <button type="submit" class="btn btn-zybach me-1">
