fix missing calendar icon

--- a/Zybach.Web/src/app/shared/components/chemigation-inspection-upsert/chemigation-inspection-upsert.component.html
+++ b/Zybach.Web/src/app/shared/components/chemigation-inspection-upsert/chemigation-inspection-upsert.component.html
@@ -12,7 +12,7 @@
                     placeholder="yyyy-mm-dd"
                     [(ngModel)]="inspection.InspectionDate" ngbDatepicker #d1="ngbDatepicker" />
                     <div class="input-group-append">
-                        <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()" type="button"></button>
+                        <button class="btn btn-zybach input-group-append" (click)="d1.toggle()" type="button"><span class="far fa-calendar me-2 col-1"> </span></button>
                     </div>
                 </div>
             </div>
