--- a/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
+++ b/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
@@ -41,7 +41,7 @@
                             <input class="form-control" name="startDate" placeholder="Select a start date"
                                 [(ngModel)]="sensorAnomalyModel.StartDate" ngbDatepicker #d1="ngbDatepicker" required >
                             <div class="input-group-append">
-                            <button class="btn btn-secondary far fa-calendar" (click)="d1.toggle()" type="button"></button>
+                            <button class="btn btn-secondary" (click)="d1.toggle()" type="button"><span class="far fa-calendar me-2 col-1"> </span></button>
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                             <input class="form-control" name="endDate" placeholder="Select an end date"
                                 [(ngModel)]="sensorAnomalyModel.EndDate" ngbDatepicker #d2="ngbDatepicker" required >
                             <div class="input-group-append">
-                            <button class="btn btn-secondary far fa-calendar" (click)="d2.toggle()" type="button"></button>
+                            <button class="btn btn-secondary" (click)="d2.toggle()" type="button"><span class="far fa-calendar me-2 col-1"> </span></button>
                             </div>
                         </div>
                     </div>
