add back the css for the required symbol

--- a/Zybach.Web/src/scss/_custom-bootstrap.scss
+++ b/Zybach.Web/src/scss/_custom-bootstrap.scss
@@ -167,3 +167,12 @@ a:hover {
 {
   top:150px;
 }
+
+.required::after {
+  content: "\f0e7";
+  font-weight: 900;
+  margin-left: 5px;
+  font-size: 10px;
+  font-family: "Font Awesome 5 Free";
+  vertical-align: top;
+}
