Fixes from pairing with Stewart

--- a/Zybach.Web/src/app/app.component.html
+++ b/Zybach.Web/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header-nav></header-nav>
-<div class="mh-auto  page-content">
+<div class="mh-auto min-vh-100 page-content">
     <router-outlet></router-outlet>
 </div>
 <footer class="footer mt-5">
