--- a/Zybach.Web/src/app/pages/support-ticket-list/support-ticket-list.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-list/support-ticket-list.component.html
@@ -11,9 +11,9 @@
             <div class="row my-2">
                 <div class="col">
                     <a class="btn btn-zybach btn-md me-3 float-end" routerLink="/support-tickets/new"
-                    ngbTooltip="Create New Support Ticket"><span class="fas fa-plus"></span> New Support Ticket </a>
+                    ngbTooltip="Create New Support Ticket" [placement]="['bottom', 'right', 'left', 'auto']"><span class="fas fa-plus"></span> New Support Ticket </a>
                     <button class="btn btn-secondary btn-md float-end me-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                    ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                    ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></button>
                     <fresca-clear-grid-filters-button class="me-3 float-end" [grid]="supportTicketGrid">
                     </fresca-clear-grid-filters-button>
                 </div>
