--- a/Zybach.Web/src/app/pages/chemigation-inspections-list/chemigation-inspections-list.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-inspections-list/chemigation-inspections-list.component.html
@@ -10,8 +10,8 @@
         <div class="container col-12">
             <div class="row ms-2 mb-2">
                 <div class="col">
-                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                    ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
+                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()"
+                    ngbTooltip="Download Report as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></a>
                     <fresca-clear-grid-filters-button class="float-end me-2" [grid]="chemigationInspectionsGrid">
                     </fresca-clear-grid-filters-button>
                 </div>
