--- a/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-permit-reports/chemigation-permit-reports.component.html
@@ -23,8 +23,7 @@
             <div class="row ms-2 mb-2">
                 <div class="col">
                     <button (click)="generateReport()" [disabled]="isLoadingSubmit" class="btn btn-zybach btn-md float-end"
-                        placement="top"
-                        ngbTooltip="Generate Chemigation Permit Annual Renewal Forms">
+                        ngbTooltip="Generate Chemigation Permit Annual Renewal Forms" [placement]="['bottom', 'right', 'left', 'auto']">
                         <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                         Generate Renewal Forms
                     </button>
@@ -35,8 +34,8 @@
                             {{reportTemplate.DisplayName}}
                         </option>
                     </select>
-                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                    ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
+                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()"
+                    ngbTooltip="Download Report as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></a>
                     <fresca-clear-grid-filters-button class="float-end me-2" [grid]="chemigationPermitReportGrid">
                     </fresca-clear-grid-filters-button>
                 </div>
