--- a/Zybach.Web/src/app/pages/irrigation-unit-list/irrigation-unit-list.component.html
+++ b/Zybach.Web/src/app/pages/irrigation-unit-list/irrigation-unit-list.component.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col ms-auto">
                     <button class="btn btn-secondary btn-md float-end me-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                    ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                    ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></button>
                     <fresca-clear-grid-filters-button class="me-3 float-end" [grid]="irrigationUnitGrid">
                     </fresca-clear-grid-filters-button>
                 </div>
