--- a/Zybach.Web/src/app/pages/ndee-chemicals-report/ndee-chemicals-report.component.html
+++ b/Zybach.Web/src/app/pages/ndee-chemicals-report/ndee-chemicals-report.component.html
@@ -11,7 +11,7 @@
             <div class="row my-2">
                 <div class="col">
                     <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                    ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
+                    ngbTooltip="Download Report as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></a>
                     <fresca-clear-grid-filters-button class="float-end me-2" [grid]="chemicalReportGrid">
                     </fresca-clear-grid-filters-button>
                 </div>
