--- a/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
+++ b/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
@@ -38,8 +38,8 @@
                         <div class="row mb-2">
                             <div class="col-auto ms-auto">
                                 <fresca-clear-grid-filters-button [grid]="openETGrid" classList="me-2"></fresca-clear-grid-filters-button>
-                                <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                                    ngbTooltip="Download as CSV"><i class="fas fa-download"></i>
+                                <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="exportToCsv()"
+                                    ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i>
                                 </button>
                             </div>
                         </div>
