--- a/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
+++ b/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="row mt-2">
         <div class="col">
-            <button class="btn btn-secondary btn-md float-end me-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+            <button class="btn btn-secondary btn-md float-end me-3" style="cursor: pointer;" (click)="exportToCsv()"
+            ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></button>
             <fresca-clear-grid-filters-button class="me-3 float-end" [grid]="sensorsGrid">
             </fresca-clear-grid-filters-button>
         </div>
