--- a/Zybach.Web/src/app/pages/water-level-reports/water-level-reports.component.html
+++ b/Zybach.Web/src/app/pages/water-level-reports/water-level-reports.component.html
@@ -16,8 +16,8 @@
                         Generate Water Levels Report
                     </button>
 
-                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                    ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
+                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()"
+                    ngbTooltip="Download Report as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></a>
 
                     <fresca-clear-grid-filters-button class="float-end me-2" [grid]="wellGroupsGrid"></fresca-clear-grid-filters-button>
                 </div>
