--- a/Zybach.Web/src/app/pages/water-quality-reports/water-quality-reports.component.html
+++ b/Zybach.Web/src/app/pages/water-quality-reports/water-quality-reports.component.html
@@ -15,7 +15,7 @@
                         Generate Water Quality Report
                     </button>
 
-                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                    <a class="btn btn-secondary btn-md float-end me-2" style="cursor: pointer;" (click)="exportToCsv()" [placement]="['bottom', 'right', 'left', 'auto']"
                         ngbTooltip="Download Report as CSV"><i class="fas fa-download"></i></a>
 
                     <fresca-clear-grid-filters-button class="float-end me-2" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
