--- a/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
+++ b/Zybach.Web/src/app/pages/well-group-list/well-group-list.component.html
@@ -12,8 +12,8 @@
         <div class="col-auto ms-auto">
             <fresca-clear-grid-filters-button [grid]="wellGroupsGrid" class="me-2"></fresca-clear-grid-filters-button>
 
-            <button class="btn btn-secondary btn-md me-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-                ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+            <button class="btn btn-secondary btn-md me-2" style="cursor: pointer;" (click)="exportToCsv()"
+                ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></button>
             
             <a class="btn btn-primary btn-md" routerLink="new">New Well Group <span class="fas fa-plus"></span></a>
         </div>
