--- a/Zybach.Web/src/app/shared/components/well-permits-inspections-tab/well-permits-inspections-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-permits-inspections-tab/well-permits-inspections-tab.component.html
@@ -14,10 +14,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-secondary btn-md float-end m-2" style="cursor: pointer;" (click)="exportWLIToCsv()" placement="top"
-                        ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                        <button class="btn btn-secondary btn-md float-end m-2" style="cursor: pointer;" (click)="exportWLIToCsv()"
+                        ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></button>
                         <a class="btn btn-zybach btn-md float-end m-2" routerLink="/wells/{{well.WellID}}/new-water-level-inspection"
-                        ngbTooltip="New Water Level Inspection"><span class="fas fa-plus"></span></a>
+                        ngbTooltip="New Water Level Inspection" [placement]="['bottom', 'right', 'left', 'auto']"><span class="fas fa-plus"></span></a>
                         <fresca-clear-grid-filters-button class="m-2 float-end" [grid]="waterLevelInspectionsGrid">
                         </fresca-clear-grid-filters-button>
                     </div> 
@@ -49,10 +49,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-secondary btn-md float-end m-2" style="cursor: pointer;" (click)="exportWQIToCsv()" placement="top"
-                        ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+                        <button class="btn btn-secondary btn-md float-end m-2" style="cursor: pointer;" (click)="exportWQIToCsv()"
+                        ngbTooltip="Download as CSV" [placement]="['bottom', 'right', 'left', 'auto']"><i class="fas fa-download"></i></button>
                         <a class="btn btn-zybach btn-md float-end m-2" routerLink="/wells/{{well.WellID}}/new-water-quality-inspection"
-                        ngbTooltip="New Water Quality Inspection"><span class="fas fa-plus"></span></a>
+                        ngbTooltip="New Water Quality Inspection" [placement]="['bottom', 'right', 'left', 'auto']"><span class="fas fa-plus"></span></a>
                         <fresca-clear-grid-filters-button class="m-2 float-end" [grid]="waterQualityInspectionsGrid">
                         </fresca-clear-grid-filters-button>
                     </div>
