Fixing Total Acres summing error & making a few styling tweaks.

--- a/Zybach.Web/src/app/pages/farming-practices/farming-practices.component.html
+++ b/Zybach.Web/src/app/pages/farming-practices/farming-practices.component.html
@@ -46,8 +46,8 @@
                     </div>
 
                     <hr/>
-                    <div class="text-right">
-                        <b>Total Irrigated Acres:  {{ totalAcres | number:'0.2-2'}}</b>
+                    <div class="legend-footer">
+                        Total Irrigated Acres:  {{ totalAcres | number:'0.2-2'}} ac
                     </div>
                 </div>
                 <ng-template #loadingData>
