--- a/Zybach.Web/src/app/pages/farming-practices/farming-practices.component.scss
+++ b/Zybach.Web/src/app/pages/farming-practices/farming-practices.component.scss
@@ -14,8 +14,8 @@
         }
 
         .legend-stat-bullet {
-            height: 8px;
-            width: 8px;
+            height: 6px;
+            width: 6px;
             border-radius: 20px;
             margin: 0;
             margin-left: 5px;
@@ -25,6 +25,11 @@
             margin: 0;
             margin-left: auto;
         }
+    }
+
+    .legend-footer {
+        font-weight: bold;
+        text-align: right;
     }
 }
 
