--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -136,7 +136,7 @@
                         <a class="dropdown-item" routerLink="/irrigation-units">
                             Irrigation Unit Summary
                         </a>
-                        <a class="dropdown-item" routerLink="/irrigation-units">
+                        <a class="dropdown-item" routerLink="/farming-practices">
                             Farming Practices Data Explorer
                         </a>
                         <div class="dropdown-divider"></div>
