Ripping out GeoOptix call from Well search logic; removing GeoOptixSearchService. Adding logic to allow users to search by Chemigation Permit #.

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -204,11 +204,11 @@
                         <ng-template let-result pTemplate="item">
                             <div style="border-bottom:1px solid #D5D5D5">
                                 <div class="objectType">
-                                    {{ result.ObjectType }}
+                                    {{ result.ObjectType }}<span *ngIf="result.ObjectName">: {{ result.ObjectName }}</span>
                                 </div>
 
                                 <a routerLink="/wells/{{result.WellID}}">
-                                    {{ result.ObjectName }}
+                                    {{ result.WellName }}
                                 </a>
                             </div>
                         </ng-template>
