Fixing hamburger menu toggle

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -4,7 +4,7 @@
     <a routerLink="/" routerLinkActive="active" class="navbar-brand nav-link">
         Groundwater Managers Platform
     </a>
-    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-target="#navbar2"
+    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbar2"
         (click)="toggleCurrentPageHeader()">
         <span class="navbar-toggler-icon"></span>
     </button>
